--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "rag-chatbot"
+name = "pinecone-rag-chatbot"
 version = "1.0.0"
 description = "A production-ready RAG chatbot with Pinecone and OpenAI"
 authors = [
-    {name = "CodeAssistant", email = "code@assistant.ai"}
+    {name = "Roman Sipula", email = "romansipula@gmail.com"}
 ]
 readme = "README.md"
 license = {text = "MIT"}
