--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,15 @@ readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.8"
 dependencies = [
-    "pinecone-client>=2.2.4",
+    "pinecone>=3.0.0",
     "openai>=1.3.8",
     "langchain>=0.1.0",
     "langchain-openai>=0.0.2",
     "sentence-transformers>=2.2.2",
+    "pypdf>=3.15.1",
+    "jinja2>=3.1.2",
+    "python-dotenv>=1.0.0",
+]
     "pypdf>=3.15.1",
     "jinja2>=3.1.2",
     "python-dotenv>=1.0.0",
