Fix Pinecone SDK compatibility and add pytest configuration

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 
 # Pinecone Configuration
 PINECONE_API_KEY=your_pinecone_api_key_here
+PINECONE_ENVIRONMENT=your_pinecone_environment_here
 PINECONE_INDEX_NAME=rag-chatbot
 
 # OpenAI Configuration
