--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -46,7 +46,7 @@ jobs:
       run: |
         black --check --diff .
     
-    - name: Test with pytest
+    - name: Run tests
       run: |
         pytest src/tests/ -v --cov=src --cov-report=xml --cov-report=term-missing
     
