--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pinecone-client==2.2.4
-openai==1.3.8
+openai>=1.6.1
 langchain==0.1.0
 langchain-openai==0.0.2
 sentence-transformers==2.2.2
@@ -7,6 +7,7 @@ pypdf==3.15.1
 jinja2==3.1.2
 python-dotenv==1.0.0
 pytest==7.4.3
+pytest-cov==4.1.0
 pytest-mock==3.12.0
 black==23.11.0
 flake8==6.1.0
